Fixed broken css link.

--- a/TCL.css
+++ b/TCL.css
@@ -2,9 +2,9 @@
 
 
 html {
-  font-size: 120%;
+  font-size: 200%;
   font-family: "Jost", sans-serif;
-  background-color: #eee;
+  background-color: ghostwhite;
   overflow-y: scroll
 }
 
